[package]
name = "mini-qemu"
version = "0.1.0"
edition = "2021"
authors = ["MiniKVM Project"]

[[bin]]
name = "mini-qemu"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[features]
default = ["arch-arm64"]
arch-arm64 = []
arch-x86 = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3